<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/cola"
    tools:context="coding.bear.cola.cola_l_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="700dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l"
            android:textSize="50dp"
            android:textColor="#FFFFFF"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView" />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/cola_l"
            android:id="@+id/imageView"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="11dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_price"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/textView2"
            android:layout_below="@+id/imageView"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l_bene"
            android:textSize="20dp"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp" />

        <Button
            android:id="@+id/backl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="38dp" />


    </RelativeLayout>


</ScrollView>